startups/srdt/apps/elasticsearch/templates/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: srdt-es-allow-from-admin-and-srdt
spec:
  podSelector:
    matchLabels:
      common.k8s.elastic.co/type: elasticsearch
      elasticsearch.k8s.elastic.co/cluster-name: srdt-es
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: srdt
      ports:
        - port: 9200
          protocol: TCP
